--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -5,17 +5,18 @@ error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=XD account activation is required
+email.activation.title=TaskManager account activation is required
 email.activation.greeting=Dear {0}
-email.activation.text1=Your XD account has been created, please click on the URL below to activate it:
+email.activation.text1=Your TaskManager account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
-email.signature=XD Team.
+email.signature=TaskManager Team.
+email.activation.link=Activation Link
 
 # Creation email
-email.creation.text1=Your XD account has been created, please click on the URL below to access it:
+email.creation.text1=Your TaskManager account has been created, please click on the URL below to access it:
 
 # Reset email
-email.reset.title=XD password reset
+email.reset.title=TaskManager password reset
 email.reset.greeting=Dear {0}
-email.reset.text1=For your XD account a password reset was requested, please click on the URL below to reset it:
+email.reset.text1=For your TaskManager account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
