--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -13,6 +13,7 @@ email.signature=TaskManager Team.
 email.activation.link=Activation Link
 
 # Creation email
+email.creation.title = TaskManager account activation is required
 email.creation.text1=Your TaskManager account has been created, please click on the URL below to access it:
 
 # Reset email
