--- a/inzynierstwo/literatura.bib
+++ b/inzynierstwo/literatura.bib
@@ -5,9 +5,9 @@
 }
 
 @misc{Spring Boot,
-	title={Java Technology},
-	howpublished={Web pages: \url{http://www.oracle.com/technetwork/java/}},
-	url={http://www.oracle.com/technetwork/java/}
+	title={Spring Boot Documentation},
+	howpublished={Web pages: \url{https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/}},
+	url={https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/}
 }
 @book{HTML-CSS,
     author={Ben Frain},
